Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21794

Project-specific file encoding ignored in Git Diff output

    XMLWordPrintable

Details

    • Windows
    • 967e8cf260 (qt-creator/qt-creator/9.0) 967e8cf260 (qt-creator/qt-creator/master) 967e8cf260 (qt-creator/qt-creator/qds/dev)

    Description

      I'm in the process of changing the file encoding of my project from my system's default encoding (CP1252) to UTF-8 so that my compiler better supports Qt5. Not all of my projects yet support UTF-8, so my global encoding is still System (CP1252).

      When I view the Git Diff output by double-clicking on a file in the Git Commit dialog, my project-specific file encoding setting is ignored and it's using the global encoding instead. As a result, the non-ANSI symbols in my string literals look garbled after I run iconv. Changing the global file encoding to match my project fixes this.

      Diff results with Project File Encoding = UTF-8 and Global File Encoding = System (CP1252):

      Diff results with Project File Encoding = UTF-8 and Global File Encoding = UTF-8:

      The latter is the correct result.

       

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-21794
        # Subject Branch Project Status CR V

        Activity

          People

            orgads Orgad Shaneh
            phlucious Evon Silvia
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes